# File-Antagonist

./: package.json
.github/workflows/: main.yml
src/: App.jsx  funcs.js
src-tauri/: Cargo.toml  tauri.conf.json  tmp.cmd
src-tauri/crates/utils/: Cargo.toml
src-tauri/crates/utils/src/: lib.rs
src-tauri/crates/utils/tests/: file_test.rs
src-tauri/crates/utils/tests/outputs/: output.json
src-tauri/src/: lib.rs  logger.rs  main.rs  size.rs
src/Components/: search.jsx  view.jsx
